--- a/.github/workflows/detect-breaking-changes-notify.yml
+++ b/.github/workflows/detect-breaking-changes-notify.yml
@@ -12,9 +12,9 @@ jobs:
   notify:
     name: Notify
     runs-on: ubuntu-latest
-    if: >
-      ${{ github.event.workflow_run.event == 'pull_request' &&
-      github.event.workflow_run.conclusion == 'success' }}
+    # if: >
+    #   ${{ github.event.workflow_run.event == 'pull_request' &&
+    #   github.event.workflow_run.conclusion == 'success' }}
 
     steps:
     - name: Debugging
