--- a/.github/workflows/detect-breaking-changes-build.yml
+++ b/.github/workflows/detect-breaking-changes-build.yml
@@ -10,31 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Add "announcement" label
-      uses: actions/github-script@v5
-      env:
-        PR_NUMBER: ${{ github.event.number }}
-      with:
-        script: |
-          github.rest.issues.addLabels({
-            issue_number: process.env.PR_NUMBER,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            labels: ['announcement']
-          })
-
-    - uses: actions/github-script@v5
-      env:
-        PR_NUMBER: ${{ github.event.number }}
-      with:
-        script: |
-          github.rest.issues.createComment({
-            issue_number: process.env.PR_NUMBER,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: '👋 Thanks for reporting!'
-          })
-
+    - name: Test
+      run: |
+        echo "TEST: \"${{ secrets.GH_BOT_ACCESS_TOKEN }}\""
     # - name: Install Node.js
     #   uses: actions/setup-node@v2
     #   with:
