--- a/.drone.yml
+++ b/.drone.yml
@@ -251,7 +251,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
-  - printenv GCP_KEY | base64 -d > /tmp/gcpkey_upload_artifacts.json
+  - printenv GCP_GRAFANA_UPLOAD_ARTIFACTS_KEY | base64 -d > /tmp/gcpkey_upload_artifacts.json
   - gcloud auth activate-service-account --key-file=/tmp/gcpkey_upload_artifacts.json
   - gsutil -m rsync -d -r ./e2e/videos gs://$${UPLOAD_E2E_TEST_ARTIFACTS_BUCKET}/artifacts/${DRONE_BUILD_NUMBER}
   depends_on:
@@ -4244,6 +4244,6 @@ kind: secret
 name: gcp_upload_artifacts_key
 ---
 kind: signature
-hmac: 10aac31a767d09b2a2dfcbca7f659f7f402cee5878f65b1f2a587bc3d1b71f82
+hmac: 83d453a5fd1b0379a7427f87df0d16476aa81d5af9cbfb2d415a33a84f05d7ea
 
 ...
