--- a/.drone.yml
+++ b/.drone.yml
@@ -251,6 +251,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - printenv GCP_GRAFANA_UPLOAD_ARTIFACTS_KEY | head -c10
   - printenv GCP_GRAFANA_UPLOAD_ARTIFACTS_KEY | base64 -d > /tmp/gcpkey_upload_artifacts.json
   - gcloud auth activate-service-account --key-file=/tmp/gcpkey_upload_artifacts.json
   - gsutil -m rsync -d -r ./e2e/videos gs://$${UPLOAD_E2E_TEST_ARTIFACTS_BUCKET}/artifacts/${DRONE_BUILD_NUMBER}
@@ -4244,6 +4245,6 @@ kind: secret
 name: gcp_upload_artifacts_key
 ---
 kind: signature
-hmac: 38b15ef792ec086f0de6b302b0010e58ee741df86a13ff747a38ad7e4bfc815b
+hmac: dbf68212e30b94c68723956dbdfc4074b6a6f8ab4d1cfb7d3d96345feb429a63
 
 ...
