feat(e2e-artifacts): secret is not encoded. directly printing into json

--- a/.drone.yml
+++ b/.drone.yml
@@ -252,7 +252,7 @@ steps:
     path: /root/.cache/Cypress
 - commands:
   - printenv GCP_GRAFANA_UPLOAD_ARTIFACTS_KEY | head -c10
-  - printenv GCP_GRAFANA_UPLOAD_ARTIFACTS_KEY | base64 -d > /tmp/gcpkey_upload_artifacts.json
+  - printenv GCP_GRAFANA_UPLOAD_ARTIFACTS_KEY > /tmp/gcpkey_upload_artifacts.json
   - gcloud auth activate-service-account --key-file=/tmp/gcpkey_upload_artifacts.json
   - gsutil -m rsync -d -r ./e2e/videos gs://$${UPLOAD_E2E_TEST_ARTIFACTS_BUCKET}/artifacts/${DRONE_BUILD_NUMBER}
   depends_on:
@@ -4245,6 +4245,6 @@ kind: secret
 name: gcp_upload_artifacts_key
 ---
 kind: signature
-hmac: f5168979aa193234b29e842eca3b635e59825ac8613d3c9847a603274314d71b
+hmac: af633ea41bc433f446b2a56294645597b6293e01b2d72187a2d6732ad35b1b60
 
 ...
