--- a/.drone.yml
+++ b/.drone.yml
@@ -254,7 +254,7 @@ steps:
   - printenv GCP_GRAFANA_UPLOAD_ARTIFACTS_KEY | head -c10
   - printenv GCP_GRAFANA_UPLOAD_ARTIFACTS_KEY > /tmp/gcpkey_upload_artifacts.json
   - gcloud auth activate-service-account --key-file=/tmp/gcpkey_upload_artifacts.json
-  - gsutil -m rsync -d -r ./e2e/videos gs://$${{E2E_TEST_ARTIFACTS_BUCKET}}/artifacts/${{DRONE_BUILD_NUMBER}}
+  - gsutil -m rsync -d -r ./e2e/videos gs://${E2E_TEST_ARTIFACTS_BUCKET}/artifacts/${DRONE_BUILD_NUMBER}
   depends_on:
   - end-to-end-tests-dashboards-suite
   - end-to-end-tests-panels-suite
@@ -4245,6 +4245,6 @@ kind: secret
 name: gcp_upload_artifacts_key
 ---
 kind: signature
-hmac: ef19311a685185155303eef8def4a7fec0e63229c2cf7130f134683c2d685e6a
+hmac: 5dcdc53eeef4f768565d1f9180386ecbeb47dc3cf716d0bd3f165233bdb3c846
 
 ...
