--- a/.drone.yml
+++ b/.drone.yml
@@ -251,6 +251,7 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
+  - ls -lah
   - printenv GCP_GRAFANA_UPLOAD_ARTIFACTS_KEY > /tmp/gcpkey_upload_artifacts.json
   - gcloud auth activate-service-account --key-file=/tmp/gcpkey_upload_artifacts.json
   - gsutil -m rsync -d -r ./e2e/videos gs://releng-pipeline-artifacts-dev/artifacts/${DRONE_BUILD_NUMBER}
@@ -4244,6 +4245,6 @@ kind: secret
 name: gcp_upload_artifacts_key
 ---
 kind: signature
-hmac: 1ee92d51eb5338a70d20b4583a98a8168178487791b921b01370daa6b71a0d41
+hmac: cc84604dbe70b26837e601ecf7997630e63ef45e0dcca3ec2f7b4dcff771cf2e
 
 ...
