--- a/.drone.yml
+++ b/.drone.yml
@@ -251,7 +251,8 @@ steps:
   - name: cypress_cache
     path: /root/.cache/Cypress
 - commands:
-  - ls -lah
+  - ls -lah ./e2e
+  - find ./e2e -type f -name "*.mp4"
   - printenv GCP_GRAFANA_UPLOAD_ARTIFACTS_KEY > /tmp/gcpkey_upload_artifacts.json
   - gcloud auth activate-service-account --key-file=/tmp/gcpkey_upload_artifacts.json
   - gsutil -m rsync -d -r ./e2e/videos gs://releng-pipeline-artifacts-dev/artifacts/${DRONE_BUILD_NUMBER}
@@ -266,7 +267,7 @@ steps:
       from_secret: gcp_upload_artifacts_key
     GITHUB_TOKEN:
       from_secret: github_token
-  image: publish_image
+  image: google/cloud-sdk
   name: e2e_test_artifacts_upload
 - commands:
   - yarn storybook:build
@@ -4245,6 +4246,6 @@ kind: secret
 name: gcp_upload_artifacts_key
 ---
 kind: signature
-hmac: 34c31de263392640bd70b1441c8573eb4b962982dc4303ec64aa8cf5150ff292
+hmac: 340e13ccdc4b39c9c72dc090e1b9813142950d6ccce3cd9595d74a925d134719
 
 ...
