--- a/.drone.yml
+++ b/.drone.yml
@@ -255,8 +255,7 @@ steps:
   - find ./e2e -type f -name "*.mp4"
   - printenv GCP_GRAFANA_UPLOAD_ARTIFACTS_KEY > /tmp/gcpkey_upload_artifacts.json
   - gcloud auth activate-service-account --key-file=/tmp/gcpkey_upload_artifacts.json
-  - gsutil -m rsync -a --progress --prune-empty-dirs --include="./e2e/**/*.spec.ts.mp4"
-    --exclude="*" gs://$${E2E_TEST_ARTIFACTS_BUCKET}/artifacts/${DRONE_BUILD_NUMBER}
+  - gsutil -m rsync -rx '(?!^(.*)\.spec\.ts\.mp4$)' ./e2e gs://$${E2E_TEST_ARTIFACTS_BUCKET}/artifacts/${DRONE_BUILD_NUMBER}
   depends_on:
   - end-to-end-tests-dashboards-suite
   - end-to-end-tests-panels-suite
@@ -4247,6 +4246,6 @@ kind: secret
 name: gcp_upload_artifacts_key
 ---
 kind: signature
-hmac: 805991c54bd3650db1967c1236b517ad2749441a3bc9637f8d757f4229e85df1
+hmac: 6f09c8ac9ebd21352e144f56034d4ae33c69b842a7bcb3b5bdad4a9195be24c0
 
 ...
