Add services to main-integration-tests

--- a/.drone.yml
+++ b/.drone.yml
@@ -828,7 +828,27 @@ node:
 platform:
   arch: amd64
   os: linux
-services: []
+services:
+- environment:
+    PGDATA: /var/lib/postgresql/data/pgdata
+    POSTGRES_DB: grafanatest
+    POSTGRES_PASSWORD: grafanatest
+    POSTGRES_USER: grafanatest
+  image: postgres:12.3-alpine
+  name: postgres
+  volumes:
+  - name: postgres
+    path: /var/lib/postgresql/data/pgdata
+- environment:
+    MYSQL_DATABASE: grafana_tests
+    MYSQL_PASSWORD: password
+    MYSQL_ROOT_PASSWORD: rootpass
+    MYSQL_USER: grafana
+  image: mysql:5.6.48
+  name: mysql
+  volumes:
+  - name: mysql
+    path: /var/lib/mysql
 steps:
 - commands:
   - mkdir -p bin
@@ -4173,6 +4193,6 @@ kind: secret
 name: prerelease_bucket
 ---
 kind: signature
-hmac: b55aecf3a16dab1bd8971dee4e7ef4f08d723d68f4ae1abae28e9f1c6d4126b9
+hmac: 0f338f340292dfccc4f8dea56edba284a1ca92417681ecc02e7494e8c003aa45
 
 ...
