--- a/.github/workflows/remove-milestone.yml
+++ b/.github/workflows/remove-milestone.yml
@@ -23,13 +23,13 @@ jobs:
           ref: main
       - name: Install Actions
         run: npm install --production --prefix ./actions
-      - name: Remove milestone from open issues
+      - name: Remove milestone from open issues (manually invoked)
         if: ${{ github.event.inputs.version != '' }}
         uses: ./actions/remove-milestone
         with:
           version: ${{ github.event.inputs.version }}
           token: ${{secrets.GH_BOT_ACCESS_TOKEN}}
-      - name: Remove milestone from open issues
+      - name: Remove milestone from open issues (workflow invoked)
         if: ${{ inputs.version_call != '' }}
         uses: ./actions/remove-milestone
         with:
