Replace publish keyword with store

--- a/.drone.yml
+++ b/.drone.yml
@@ -706,7 +706,7 @@ steps:
     PRERELEASE_BUCKET:
       from_secret: prerelease_bucket
   image: grafana/grafana-ci-deploy:1.3.1
-  name: publish-storybook
+  name: store-storybook
 - commands:
   - yarn wait-on http://$HOST:$PORT
   - pa11y-ci --config .pa11yci.conf.js --json > pa11y-ci-results.json
@@ -1032,7 +1032,7 @@ steps:
   name: initialize
 - commands:
   - printenv GCP_KEY | base64 -d > /tmp/gcpkey.json
-  - ./bin/grabpl publish-packages --edition oss --gcp-key /tmp/gcpkey.json --build-id
+  - ./bin/grabpl store-packages --edition oss --gcp-key /tmp/gcpkey.json --build-id
     ${DRONE_BUILD_NUMBER}
   depends_on:
   - initialize
@@ -1048,7 +1048,7 @@ steps:
     GRAFANA_COM_API_KEY:
       from_secret: grafana_api_key
   image: grafana/grafana-ci-deploy:1.3.1
-  name: publish-packages-oss
+  name: store-packages-oss
 trigger:
   branch: main
   event:
@@ -1450,11 +1450,11 @@ steps:
     PRERELEASE_BUCKET:
       from_secret: prerelease_bucket
   image: grafana/grafana-ci-deploy:1.3.1
-  name: publish-storybook
+  name: store-storybook
 - commands:
   - ./scripts/build/build-npm-packages.sh ${DRONE_TAG}
   depends_on:
-  - publish-storybook
+  - store-storybook
   image: grafana/build-container:1.4.8
   name: build-npm-packages
 - commands:
@@ -2465,7 +2465,7 @@ steps:
     PRERELEASE_BUCKET:
       from_secret: prerelease_bucket
   image: grafana/grafana-ci-deploy:1.3.1
-  name: publish-storybook
+  name: store-storybook
 trigger:
   event:
   - custom
@@ -3127,7 +3127,7 @@ steps:
   name: initialize
 - commands:
   - printenv GCP_KEY | base64 -d > /tmp/gcpkey.json
-  - ./bin/grabpl publish-packages --edition oss --gcp-key /tmp/gcpkey.json --deb-db-bucket
+  - ./bin/grabpl store-packages --edition oss --gcp-key /tmp/gcpkey.json --deb-db-bucket
     grafana-testing-aptly-db --deb-repo-bucket grafana-testing-repo --packages-bucket
     grafana-downloads-test --rpm-repo-bucket grafana-testing-repo --simulate-release
     v7.3.0-test
@@ -3145,13 +3145,13 @@ steps:
     GRAFANA_COM_API_KEY:
       from_secret: grafana_api_key
   image: grafana/grafana-ci-deploy:1.3.1
-  name: publish-packages-oss
+  name: store-packages-oss
 - commands:
   - printenv GCP_KEY | base64 -d > /tmp/gcpkey.json
-  - ./bin/grabpl publish-packages --edition enterprise --gcp-key /tmp/gcpkey.json
-    --deb-db-bucket grafana-testing-aptly-db --deb-repo-bucket grafana-testing-repo
-    --packages-bucket grafana-downloads-test --rpm-repo-bucket grafana-testing-repo
-    --simulate-release v7.3.0-test
+  - ./bin/grabpl store-packages --edition enterprise --gcp-key /tmp/gcpkey.json --deb-db-bucket
+    grafana-testing-aptly-db --deb-repo-bucket grafana-testing-repo --packages-bucket
+    grafana-downloads-test --rpm-repo-bucket grafana-testing-repo --simulate-release
+    v7.3.0-test
   depends_on:
   - initialize
   environment:
@@ -3166,7 +3166,7 @@ steps:
     GRAFANA_COM_API_KEY:
       from_secret: grafana_api_key
   image: grafana/grafana-ci-deploy:1.3.1
-  name: publish-packages-enterprise
+  name: store-packages-enterprise
 trigger:
   event:
   - custom
@@ -4309,6 +4309,6 @@ kind: secret
 name: prerelease_bucket
 ---
 kind: signature
-hmac: e9f0799a3d0a25a5a7caa6bca1e09ee7590d0877c7d56c680b64e6e601d17f3a
+hmac: f747088e528e76bfcf7016740e756ac92ae9628bb5945a78e7dc7a137b8ae4de
 
 ...
