--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -5,6 +5,12 @@ on:
       version:
         required: true
         default: '7.x.x'
+  workflow_call:
+    inputs:
+      version_call:
+        description: Needs to match, exactly, the name of a version
+        required: true
+        type: string
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -71,4 +77,4 @@ jobs:
         with:
           version: ${{ inputs.version_call }}
           token: ${{secrets.GH_BOT_ACCESS_TOKEN}}
-          metricsWriteAPIKey: ${{secrets.GRAFANA_MISC_STATS_API_KEY}}          
+          metricsWriteAPIKey: ${{secrets.GRAFANA_MISC_STATS_API_KEY}}
