--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -7,22 +7,22 @@ on:
         required: true
 
 jobs:
-  call-remove-milestone:
-    uses: grafana/grafana/.github/workflows/remove-milestone.yml@main
-    with:
-      version_call: ${{ github.event.inputs.version_input }}
-  call-close-milestone:
-    uses: grafana/grafana/.github/workflows/close-milestone.yml@main
-    with:
-      version_call: ${{ github.event.inputs.version_input }}
-    needs: call-remove-milestone
+  # call-remove-milestone:
+  #   uses: grafana/grafana/.github/workflows/remove-milestone.yml@main
+  #   with:
+  #     version_call: ${{ github.event.inputs.version_input }}
+  # call-close-milestone:
+  #   uses: grafana/grafana/.github/workflows/close-milestone.yml@main
+  #   with:
+  #     version_call: ${{ github.event.inputs.version_input }}
+  #   needs: call-remove-milestone
   call-bump-version:
     uses: grafana/grafana/.github/workflows/bump-version.yml@main
     with:
       version_call: ${{ github.event.inputs.version_input }}
-    needs: call-close-milestone
-  call-update-changelog:
-    uses: grafana/grafana/.github/workflows/update-changelog.yml@main
-    with:
-      version_call: ${{ github.event.inputs.version_input }}
-    needs: call-bump-version
+  #   needs: call-close-milestone
+  # call-update-changelog:
+  #   uses: grafana/grafana/.github/workflows/update-changelog.yml@main
+  #   with:
+  #     version_call: ${{ github.event.inputs.version_input }}
+  #   needs: call-bump-version
