--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -17,11 +17,17 @@ jobs:
     steps:
     # This is a basic workflow to help you get started with Actions
       - uses: actions-ecosystem/action-regex-match@v2.0.2
+        if: ${{ github.event.inputs.version != '' }}
         id: regex-match
         with:
           text: ${{ github.event.inputs.version }}
           regex: '^(\d+.\d+).\d+(?:-beta.\d+)?$'
-
+      - uses: actions-ecosystem/action-regex-match@v2.0.2
+        if: ${{ inputs.version_call != '' }}
+        id: regex-match
+        with:
+          text: ${{ inputs.version_call }}
+          regex: '^(\d+.\d+).\d+(?:-beta.\d+)?$'
       - name: Validate input version
         if: ${{ steps.regex-match.outputs.match == '' }}
         run: |
@@ -75,6 +81,6 @@ jobs:
         if: ${{ inputs.version_call != '' }}
         uses: ./actions/bump-version
         with:
-          version_call: ${{ inputs.version_call }}
+          version: ${{ inputs.version_call }}
           token: ${{secrets.GH_BOT_ACCESS_TOKEN}}
           metricsWriteAPIKey: ${{secrets.GRAFANA_MISC_STATS_API_KEY}}
