--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -29,12 +29,12 @@ jobs:
           text: ${{ inputs.version_call }}
           regex: '^(\d+.\d+).\d+(?:-beta.\d+)?$'
       - name: Validate input version
-        if: ${{ steps.regex-match.outputs.match == '' }}
+        if: ${{ steps.regex-match.outputs.match == '' && steps.regex-match-version-call.outputs.match == '' }}
         run: |
           echo "The input version format is not correct, please respect:\
           major.minor.patch or major.minor.patch-beta.number format. \
           example: 7.4.3 or 7.4.3-beta.1"
-          exit 1
+          exit 1    
       - uses: actions/checkout@v2
 
       - name: Set intermedia variables
