--- a/.github/workflows/remove-milestone.yml
+++ b/.github/workflows/remove-milestone.yml
@@ -5,12 +5,6 @@ on:
       version:
         required: true
         description: Needs to match, exactly, the name of a milestone
-  workflow_call:
-    inputs:
-      version_call:
-        description: Needs to match, exactly, the name of a milestone
-        required: true
-        type: string
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -23,15 +17,7 @@ jobs:
           ref: main
       - name: Install Actions
         run: npm install --production --prefix ./actions
-      - name: Remove milestone from open issues (manually invoked)
-        if: ${{ github.event.inputs.version != '' }}
+      - name: Remove milestone from open issues
         uses: ./actions/remove-milestone
         with:
-          version: ${{ github.event.inputs.version }}
-          token: ${{secrets.GH_BOT_ACCESS_TOKEN}}
-      - name: Remove milestone from open issues (workflow invoked)
-        if: ${{ inputs.version_call != '' }}
-        uses: ./actions/remove-milestone
-        with:
-          version: ${{ inputs.version_call }}
           token: ${{secrets.GH_BOT_ACCESS_TOKEN}}
