--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -5,12 +5,6 @@ on:
       version:
         required: true        
         description: Needs to match, exactly, the name of a milestone
-  workflow_call:
-    inputs:
-      version_call:
-        description: Needs to match, exactly, the name of a milestone
-        required: true
-        type: string        
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -23,17 +17,8 @@ jobs:
           ref: main      
       - name: Install Actions
         run: npm install --production --prefix ./actions
-      - name: Run update changelog (manually invoked)
-        if: ${{ github.event.inputs.version != '' }}
+      - name: Run update changelog
         uses: ./actions/update-changelog
         with:
-          version: ${{ github.event.inputs.version }}
-          token: ${{secrets.GH_BOT_ACCESS_TOKEN}}
-          metricsWriteAPIKey: ${{secrets.GRAFANA_MISC_STATS_API_KEY}}
-      - name: Run update changelog (workflow invoked)
-        if: ${{ inputs.version_call != '' }}
-        uses: ./actions/update-changelog
-        with:
-          version: ${{ inputs.version_call }}
           token: ${{secrets.GH_BOT_ACCESS_TOKEN}}
           metricsWriteAPIKey: ${{secrets.GRAFANA_MISC_STATS_API_KEY}}
