--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -14,8 +14,8 @@ on:
     secrets:
         token:
           required: true
-        token:
-          metricsWriteAPIKey: true
+        metricsWriteAPIKey:
+          required: true
 
 jobs:
   main:
