--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -20,6 +20,7 @@ jobs:
     uses: grafana/grafana/.github/workflows/bump-version.yml@prepare-release-test
     with:
       version_call: ${{ github.event.inputs.version_input }}
+    secrets:
       token: ${{ secrets.GH_BOT_ACCESS_TOKEN }}
       metricsWriteAPIKey: ${{ secrets.GRAFANA_MISC_STATS_API_KEY }}
   #   needs: call-close-milestone
