--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -86,5 +86,6 @@ jobs:
         if: ${{ inputs.version_call != '' }}
         uses: ./actions/bump-version
         with:
+          version_call: ${{ inputs.version_call }}
           token: ${{ secrets.token }}
           metricsWriteAPIKey: ${{ secrets.metricsWriteAPIKey }}
