--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -11,10 +11,13 @@ jobs:
   #   uses: grafana/grafana/.github/workflows/remove-milestone.yml@main
   #   with:
   #     version_call: ${{ github.event.inputs.version_input }}
-  # call-close-milestone:
-  #   uses: grafana/grafana/.github/workflows/close-milestone.yml@main
-  #   with:
-  #     version_call: ${{ github.event.inputs.version_input }}
+  call-close-milestone:
+    uses: grafana/grafana/.github/workflows/close-milestone.yml@prepare-release-test
+    with:
+      version_call: ${{ github.event.inputs.version_input }}
+    secrets:
+      token: ${{ secrets.GH_BOT_ACCESS_TOKEN }}
+      metricsWriteAPIKey: ${{ secrets.GRAFANA_MISC_STATS_API_KEY }}
   #   needs: call-remove-milestone
   call-bump-version:
     uses: grafana/grafana/.github/workflows/bump-version.yml@prepare-release-test
@@ -23,7 +26,7 @@ jobs:
     secrets:
       token: ${{ secrets.GH_BOT_ACCESS_TOKEN }}
       metricsWriteAPIKey: ${{ secrets.GRAFANA_MISC_STATS_API_KEY }}
-  #   needs: call-close-milestone
+    needs: call-close-milestone
   # call-update-changelog:
   #   uses: grafana/grafana/.github/workflows/update-changelog.yml@main
   #   with:
