--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -5,6 +5,17 @@ on:
       version:
         required: true        
         description: Needs to match, exactly, the name of a milestone
+  workflow_call:
+    inputs:
+      version_call:
+        description: Needs to match, exactly, the name of a milestone
+        required: true
+        type: string
+    secrets:
+        token:
+          required: true
+        metricsWriteAPIKey:
+          required: true        
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -14,11 +25,18 @@ jobs:
         with:
           repository: "grafana/grafana-github-actions"
           path: ./actions
-          ref: main      
+          ref: mob/bump-version-update-user-essentials      
       - name: Install Actions
         run: npm install --production --prefix ./actions
-      - name: Run update changelog
+      - name: Run update changelog (manually invoked)
+        if: ${{ github.event.inputs.version != '' }}
         uses: ./actions/update-changelog
         with:
-          token: ${{secrets.GH_BOT_ACCESS_TOKEN}}
-          metricsWriteAPIKey: ${{secrets.GRAFANA_MISC_STATS_API_KEY}}
+          token: ${{ secrets.GH_BOT_ACCESS_TOKEN }}
+          metricsWriteAPIKey: ${{ secrets.GRAFANA_MISC_STATS_API_KEY }}
+      - name: Run update changelog (workflow invoked)
+        if: ${{ inputs.version_call != '' }}
+        uses: ./actions/update-changelog
+        with:
+          token: ${{ secrets.token }}
+          metricsWriteAPIKey: ${{ secrets.metricsWriteAPIKey }}
