--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -28,7 +28,7 @@ jobs:
       metricsWriteAPIKey: ${{ secrets.GRAFANA_MISC_STATS_API_KEY }}
     needs: call-close-milestone
   call-update-changelog:
-    uses: grafana/grafana/.github/workflows/update-changelog.yml@main
+    uses: grafana/grafana/.github/workflows/update-changelog.yml@prepare-release-test
     with:
       version_call: ${{ github.event.inputs.version_input }}
     secrets:
