--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -7,20 +7,20 @@ on:
         required: true
 jobs:
   call-remove-milestone:
-    uses: grafana/grafana/.github/workflows/remove-milestone.yml@prepare-release-test
+    uses: grafana/grafana/.github/workflows/remove-milestone.yml@main
     with:
       version_call: ${{ github.event.inputs.version_input }}
     secrets:
       token: ${{ secrets.GH_BOT_ACCESS_TOKEN }}
   call-close-milestone:
-    uses: grafana/grafana/.github/workflows/close-milestone.yml@prepare-release-test
+    uses: grafana/grafana/.github/workflows/close-milestone.yml@main
     with:
       version_call: ${{ github.event.inputs.version_input }}
     secrets:
       token: ${{ secrets.GH_BOT_ACCESS_TOKEN }}
     needs: call-remove-milestone
   call-bump-version:
-    uses: grafana/grafana/.github/workflows/bump-version.yml@prepare-release-test
+    uses: grafana/grafana/.github/workflows/bump-version.yml@main
     with:
       version_call: ${{ github.event.inputs.version_input }}
     secrets:
@@ -28,7 +28,7 @@ jobs:
       metricsWriteAPIKey: ${{ secrets.GRAFANA_MISC_STATS_API_KEY }}
     needs: call-close-milestone
   call-update-changelog:
-    uses: grafana/grafana/.github/workflows/update-changelog.yml@prepare-release-test
+    uses: grafana/grafana/.github/workflows/update-changelog.yml@main
     with:
       version_call: ${{ github.event.inputs.version_input }}
     secrets:
